syntax = "proto3";

package io.github.tophatcroat.hlf_contrator.schema;
option go_package = "schema";

import "google/protobuf/timestamp.proto";
import "github.com/mwitkow/go-proto-validators/validator.proto";

// Application state
message Application {
    enum State {
        APPLIED = 0;
        ACCEPTED = 1;
        REJECTED = 2;
        COMPLETED = 3;
    }

    // Identification of applier
    string contractor = 1;
    string projectName = 2;
    string projectIssuer = 3;
    // Proposed Price in cents
    int64 price = 4;
    State state = 5;
    string description = 6;

    google.protobuf.Timestamp apply_date = 7;
}

message ApplicationId {
    string contractor = 1;
    string projectName = 2;
    string projectIssuer = 3;
}

message ApplicationList {
    repeated Application items = 1;
}

message PublishApplication {
    string projectName = 1;
    string projectIssuer = 2;
    // Proposed Price in cents
    int64 price = 3;
    string description = 5;
}
